# BiosInfectionDemo-v0.2.0

./: README.md  build.bat  clean.bat  clean_and_rebuild.bat
Bios/: CMakeLists.txt
Bios/include/bios/: Bios.hpp  BiosIO.hpp  BiosVector.hpp  IBios.hpp  IBiosIO.hpp  IBiosVector.hpp
Bios/include/bios/exceptions/: BiosNotReadableException.hpp  BiosNotWriteableException.hpp
Bios/include/bios/patch/: IPatch.hpp
Bios/src/bios/: Bios.cpp  BiosIO.cpp  BiosVector.cpp
Bios/src/bios/exceptions/: BiosNotReadableException.cpp  BiosNotReadableException.hpp  BiosNotWriteableException.cpp  BiosNotWriteableException.hpp
BiosPatch/: CMakeLists.txt
BiosPatch/include/bios/patch/: Patch.hpp
BiosPatch/src/bios/patch/: Patch.cpp
BiosPatcherApp/: CMakeLists.txt
BiosPatcherApp/src/: EntryPoint.cpp
BiosPatcherApp/src/bios/: MockBios.cpp  MockBios.hpp
BiosPatcherAppController/: CMakeLists.txt
BiosPatcherAppController/include/controller/: Controller.hpp  IController.hpp
BiosPatcherAppController/include/controller/view/interface/: IGui.hpp  IGuiFactory.hpp
BiosPatcherAppController/src/controller/: Controller.cpp
BiosPatcherAppQtGui/: CMakeLists.txt
BiosPatcherAppQtGui/include/controller/view/impl/qt/: Gui.hpp  GuiFactory.hpp  MainWindow.hpp
BiosPatcherAppQtGui/src/controller/view/impl/qt/: Gui.cpp  GuiFactory.cpp  MainWindow.cpp
CommonBase/: CMakeLists.txt  CommonBase.pro
CommonBase/include/concurrency/: IReentrantLock.hpp  ReentrantLock.hpp
CommonBase/include/exceptions/: Exception.hpp  IllegalStateException.hpp
CommonBase/include/logs/: ILog.hpp  Log.hpp  LogLevel.hpp
CommonBase/src/concurrency/: ReentrantLock.cpp
CommonBase/src/exceptions/: Exception.cpp  IllegalStateException.cpp
CommonBase/src/logs/: Log.cpp  LogLevel.cpp
Controller/include/controller/: Controller.hpp
Controller/include/controller/view/: Gui.hpp  GuiFactory.hpp
Controller/src/controller/: Controller.cpp
Controller/src/controller/view/: GuiFactory.cpp
Main/: BiosPatcherMain.pro  CMakeLists.txt
Main/src/: EntryPoint.cpp
Main/src/bios/: MockBios.hpp
QtGui/include/view/qt/: MainWindow.hpp
QtGui/src/view/: Gui.cpp
QtGui/src/view/qt/: MainWindow.cpp
Tests/: .gitignore  BiosPatcherTests.pro
Tests/Mock/src/bios/: MockBiosIO.hpp  MockBiosVector.hpp
Tests/Mock/src/bios/patch/: MockPatch.hpp
Tests/Mock/src/concurrency/: MockReentrantLock.hpp
Tests/Mock/src/logs/: MockLog.hpp
Tests/Unit/: UnitTest1.cpp
